syntax = "proto3";

package greptime.v1.codec;

import "greptime/v1/column.proto";

message InsertBatch {
  repeated Column columns = 1;
  uint32 row_count = 2;
}
